overflow fix

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    height: 100%;
+    height: 100vh;
 }
 
 .banner {
@@ -74,6 +74,7 @@ body {
 }
 
 .buy-item {
+    height: 175px;
     overflow: auto;
     border-bottom: 1px solid lightgray;
 }
@@ -85,7 +86,6 @@ body {
 }
 
 .order-container {
-    overflow: auto;
     margin: 10px 20px;
 }
 
